fix(disorder): fix horizontal scrolling

--- a/app/styles/modules/_pagenav.scss
+++ b/app/styles/modules/_pagenav.scss
@@ -44,7 +44,7 @@ $page-nav-link-padding: 7px 15px;
 }
 @media (min-width: 1200px) {
     .page-nav-sticky.ui-scrollfix {
-      width: 82.8%;
+      width: 83.2%;
     }
 }
 
